# netease-music-tui

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: cd.yml  ci.yml  rust.yml
src/: api.rs  app.rs  dbus_mpris.rs  main.rs  player.rs
src/handlers/: album_tracks.rs  albumlist.rs  artist.rs  artistlist.rs  common_events.rs  djprogram.rs  djradio.rs  empty.rs  fm.rs  home.rs  mod.rs  my_playlist.rs  playlist.rs  recommend.rs  search.rs  search_results.rs  track.rs
src/model/: album.rs  artist.rs  dj.rs  lyric.rs  mod.rs  playlist.rs  search.rs  song.rs  user.rs
src/player/: fetch.rs  fetch_data.rs  mod.rs  player.rs  sink.rs  track.rs
src/ui/: circle.rs  mod.rs  util.rs
src/util/: event.rs  mod.rs
