[package]
name = "netease_music_tui"
version = "0.1.0"
authors = ["betta <betta0801@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.6.2"
termion = "1.5"
failure = "0.1.6"
tokio = "0.1.22"
reqwest = "0.9.22"
lazy_static = "1.0"
serde = "1.0.101"
serde_json = "1.0"
vlc-rs = "0.3.0"
unicode-width = "0.1.5"
config = "0.9.3"
openssl = "0.10.25"
base64 = "0.11.0"
hex = "0.4.0"
num-bigint = "0.2"
rand = "0.7.2"
serde_urlencoded = "0.6.1"
