[package]
name = "netease_music_tui"
version = "0.1.0"
authors = ["betta <betta0801@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.6.2"
termion = "1.5"
failure = "0.1.6"
reqwest = "0.9.22"
lazy_static = "1.0"
serde = "1.0.101"
serde_json = "1.0"
unicode-width = "0.1.5"
config = "0.9.3"
openssl = "0.10.25"
base64 = "0.11.0"
hex = "0.4.0"
num-bigint = "0.2"
rand = "0.7.2"
serde_urlencoded = "0.6.1"
chrono = "0.4"
regex = "1.3.1"
simple-logging = "2.0.2"
log = "0.4"
gstreamer = "0.14.5"
gstreamer-player = "0.14.0"
log-panics = "2.0.0"
dirs = "2.0.2"
dbus = "0.7.1"

# [features]
# dbus_mpris = ["dbus"]

[[bin]]
name = "ncmt"
path = "src/main.rs"
